loop images added

--- a/loops.Rmd
+++ b/loops.Rmd
@@ -19,7 +19,15 @@ source("knitr_tweaks.R")
 ```
 
 
-Back when I introduced [scripts](./scripts.html) I said that R starts at the top of the file and runs straight through to the end of the file. That was a tiny bit of a lie. It is true that unless you insert commands to explicitly alter how the script runs, that is what will happen. However, you actually have quite a lot of flexibility in this respect. Depending on how you write the script, you can have R repeat several commands, or skip over different commands, and so on. This topic is referred to as **flow control**, and the first concept to discuss in this respect is the idea of a **loop**. The basic idea is very simple: a loop is a block of code (i.e., a sequence of commands) that R will execute over and over again until some termination criterion is met. Looping is a very powerful idea. There are (at least) three different ways to construct a loop in R, based on the `while`, `for` and `repeat` functions. I’ll discuss the first two here.
+Back when I introduced [scripts](./scripts.html) I said that R starts at the top of the file and runs straight through to the end of the file. That was a tiny bit of a lie. It is true that unless you insert commands to explicitly alter how the script runs, that is what will happen. However, you actually have quite a lot of flexibility in this respect. Depending on how you write the script, you can have R repeat several commands, or skip over different commands, and so on. This topic is referred to as **flow control**. 
+
+The first kind of flow control that I want to talk about is a **loop**. The idea is simple: a loop is a block of code (i.e., a sequence of commands) that R will execute over and over again until some *termination criterion* is met. To illustrate the idea, here's a schematic picture showing the difference between what R does with a script that contains a loop and one that doesn't:
+
+<img src="./img/loop_schematic.png" width="600px">
+
+Looping is a very powerful idea, because it allows you to automate repetitive tasks. Much like my children, R will execute an continuous cycle of *"are we there yet? are we there yet? are we there yet?"* checks against the termination criterion, and it will keep going forever until it is finally *there* and can break out of the loop. Rather unlike my children, however, I find that this behaviour is actually helpful.
+
+There are several different ways to construct a loop in R. There are two methods I'll talk about here, one using the `while` command and another using the `for` command. 
 
 ## The `while` loop
 
@@ -33,7 +41,9 @@ while ( CONDITION ) {
 ```
 The code corresponding to `condition` needs to produce a logical value, either `TRUE` or `FALSE`. Whenever R encounters a while statement, it checks to see if the condition is `TRUE`. If it is, then R goes on to execute all of the commands inside the curly brackets, proceeding from top to bottom as usual. However, when it gets to the bottom of those statements, it moves back up to the while statement. Then, like the mindless automaton it is, it checks to see if the condition is `TRUE`. If it is, then R goes on to execute all the commands inside ... well, you get the idea. This continues endlessly until at some point the `condition` turns out to be `FALSE`. Once that happens, R jumps to the bottom of the loop (i.e., to the `}` character), and then continues on with whatever commands appear next in the script.
 
-To start with, let’s keep things simple, and use a `while` loop to calculate the smallest multiple of 179 that is greater than or equal to 1000. This is of course a very silly example since you can actually calculate it using simple arithmetic operations, but the point here isn’t to do something novel. The point is to show how to write a `while` loop. Here’s the code in action:
+### A simple example
+
+To start with, let’s keep things simple, and use a `while` loop to calculate the smallest multiple of 179 that is greater than or equal to 1000. This is of course a very silly example, since you can calculate it using simple arithmetic, but the point here isn’t to do something novel. The point is to show how to write a `while` loop. Here’s the code in action:
 
 ```{r}
 x <- 0
@@ -43,7 +53,13 @@ while(x < 1000) {
 print(x)
 ```
 
-When we run this code, R starts at the top and creates a new variable called `x` and assigns it a value of 0. It then moves down to the loop, and “notices” that the condition here is `x < 1000`. Since the current value of `x` is zero, the condition is `TRUE`, so it enters the body of the loop (inside the curly braces). There’s only one command here, which instructs R to increase the value of `x` by 179. R then returns to the top of the loop, and rechecks the condition. The value of `x` is now 179, but that’s still less than 1000, so the loop continues. To see this, we can move the `print` statement inside the body of the loop so that we can see each increment take place. Let’s watch:
+When we run this code, R starts at the top and creates a new variable called `x` and assigns it a value of 0. It then moves down to the loop, and “notices” that the condition here is `x < 1000`. Since the current value of `x` is zero, the condition is `TRUE`, so it enters the body of the loop (inside the curly braces). There’s only one command here, which instructs R to increase the value of `x` by 179. R then returns to the top of the loop, and rechecks the condition. The value of `x` is now 179, but that’s still less than 1000, so the loop continues. Here's a visual representation of that:
+
+
+<img src="./img/loop_while1.png" width="300px">
+
+
+To see this, we can move the `print` statement inside the body of the loop so that we can see each increment take place. Let’s watch:
 
 ```{r}
 x <- 0
@@ -55,46 +71,7 @@ while(x < 1000) {
 
 Truly fascinating stuff. 
 
-## The `for` loop
-
-The `for` loop is also pretty simple, though not quite as simple as the `while` loop. The basic format of this loop goes like this:
-
-```
-for ( VAR in VECTOR ) {
-  STATEMENT1
-  STATEMENT2
-  ETC 
-}
-```
-
-In a `for` loop, R runs a fixed number of iterations. We have a vector which has several elements, each one corresponding to a possible value of the variable `var`. In the first iteration of the loop, `var` is given a value corresponding to the first element of vector; in the second iteration of the loop `var` gets a value corresponding to the second value in vector; and so on. Once we’ve exhausted all of the values in the vector, the loop terminates and the flow of the program continues down the script. For example, this loop will print the word "hello" three times:
-
-```{r}
-for(i in 1:3) {
-  print("hello")
-}
-```
-
-However, there’s nothing that stops you from using something non-numeric as the vector of possible values, as the following example illustrates. This time around, we’ll use a character vector to control our loop, which in this case will be a vector of words. And what we’ll do is calculate the length of the word, and print it out. Here’s the script:
-
-```{r}
-# the words
-words <- c("it","was","the","dirty","end","of","winter")
-
-# loop over the words
-for(w in words) {
-  l <- nchar(w)
-  print(l)
-}
-```
-
-Of course, we actually didn't need that loop at all since the `nchar` function can take vectors of words as its input, like so:
-```{r}
-nchar(words)
-```
-
-
-## An example
+### A longer example
 
 To give you a sense of how you can use a loop in a more complex situation, let’s write a simple script to simulate the progression of a mortgage. Suppose we have a nice young couple who borrow \$300000 from the bank, at an annual interest rate of 5%. The mortgage is a 30 year loan, so they need to pay it off within 360 months total. Our happy couple decide to set their monthly mortgage payment at \$1600 per month. Will they pay off the loan in time or not? Only time will tell. Or, alternatively, we could simulate the whole process and get R to tell us. The code to run this is a fair bit more complicated, so we'll keep it all in a script called [mortgage.R](./scripts/mortgage.R). 
 
@@ -172,7 +149,52 @@ source("./scripts/mortgage.R")
 So our nice young couple have paid off their \$300,000 loan in just 4 months shy of the 30 year term of their loan, at a bargain basement price of \$568,046. A happy ending!
 
 
-## Turtle
+
+
+
+## The `for` loop
+
+The `for` loop is also pretty simple, though not quite as simple as the `while` loop. The basic format of this loop goes like this:
+
+```
+for ( VAR in VECTOR ) {
+  STATEMENT1
+  STATEMENT2
+  ETC 
+}
+```
+
+In a `for` loop, R runs a fixed number of iterations. We have a vector which has several elements, each one corresponding to a possible value of the variable `var`. In the first iteration of the loop, `var` is given a value corresponding to the first element of vector; in the second iteration of the loop `var` gets a value corresponding to the second value in vector; and so on. Once we’ve exhausted all of the values in the vector, the loop terminates and the flow of the program continues down the script. 
+
+### Simple examples
+
+For example, this loop will print the word "hello" three times:
+
+```{r}
+for(i in 1:3) {
+  print("hello")
+}
+```
+
+However, there’s nothing that stops you from using something non-numeric as the vector of possible values, as the following example illustrates. This time around, we’ll use a character vector to control our loop, which in this case will be a vector of words. And what we’ll do is calculate the length of the word, and print it out. Here’s the script:
+
+```{r}
+# the words
+words <- c("it","was","the","dirty","end","of","winter")
+
+# loop over the words
+for(w in words) {
+  l <- nchar(w)
+  print(l)
+}
+```
+
+Of course, we actually didn't need that loop at all since the `nchar` function can take vectors of words as its input, like so:
+```{r}
+nchar(words)
+```
+
+### A turtle example
 
 ```{r, fig.show='animate', interval=0.3, cache=TRUE}
 library(grid)           # grid graphics
