--- a/loops.Rmd
+++ b/loops.Rmd
@@ -58,8 +58,7 @@ When we run this code, R starts at the top and creates a new variable called `x`
 
 <img src="./img/loop_while1.png" width="300px">
 
-
-To see this, we can move the `print` statement inside the body of the loop so that we can see each increment take place. Let’s watch:
+To see this in action, we can move the `print` statement inside the body of the loop. By doing that, R will print out the value of `x` every time it gets updated. Let’s watch:
 
 ```{r}
 x <- 0
@@ -69,11 +68,13 @@ while(x < 1000) {
 }
 ```
 
-Truly fascinating stuff. 
+Truly fascinating stuff. `r emo::ji("thinking")`
 
-### A longer example
+### Mortgage calculator
 
-To give you a sense of how you can use a loop in a more complex situation, let’s write a simple script to simulate the progression of a mortgage. Suppose we have a nice young couple who borrow \$300000 from the bank, at an annual interest rate of 5%. The mortgage is a 30 year loan, so they need to pay it off within 360 months total. Our happy couple decide to set their monthly mortgage payment at \$1600 per month. Will they pay off the loan in time or not? Only time will tell. Or, alternatively, we could simulate the whole process and get R to tell us. The code to run this is a fair bit more complicated, so we'll keep it all in a script called [mortgage.R](./scripts/mortgage.R). 
+To give you a sense of how you can use a `while` loop in a more complex situation, let’s write a simple script to simulate the progression of a mortgage. Suppose we have a nice young couple who borrow \$300000 from the bank, at an annual interest rate of 5%.^[I love that I wrote this when living in a city where $300000 felt like a semi-plausible number, rather than way, way too small. Sydney real estate is absurd.] The mortgage is a 30 year loan, so they need to pay it off within 360 months total. Our happy couple decide to set their monthly mortgage payment at \$1600 per month. Will they pay off the loan in time or not? Only time will tell. 
+
+Or, alternatively, we could simulate the whole process and get R to tell us. The code to run this is a little more complicated, so we'll keep it all in a script called [mortgage.R](./scripts/mortgage.R). 
 
 ```{r, eval=FALSE}
 # setup
@@ -105,7 +106,7 @@ while(balance > 0){
 cat("total payments made", total_paid, "\n")
 ```
 
-To explain what’s going on, let’s go through it carefully. In the first block of code (lines 2-6) all we’re doing is specifying all the variables that define the problem:
+To explain what’s going on, let’s go through this script line by line. In the first part of the code, all we’re doing is specifying the variables that define the problem:
 
 ```{r,eval=FALSE}
 month <- 0         # count the number of months
@@ -117,13 +118,15 @@ total_paid <- 0    # track what you’ve paid the bank
 
 The loan starts with a `balance` of \$300,000 owed to the bank on `month` zero, and at that point in time the `total_paid` money is nothing. The couple is making monthly `payments` of \$1600, at an annual `interest` rate of 5%. 
 
-Next, on line 9, we convert the annual percentage interest into a monthly multiplier.
+The next step is to convert the *annual* percentage interest into a *monthly* multiplier. That's this line:
 ```{r,eval=FALSE}
 monthly_multiplier <- (1 + interest) ^ (1/12)
 ```
-That is, the number that you have to multiply the current balance by each month in order to produce an annual interest rate of 5%. An annual interest rate of 5% implies that, if no payments were made over 12 months the balance would end up being 1.05 times what it was originally, so the *annual* multiplier is 1.05. To calculate the monthly multiplier, we need to calculate the 12th root of 1.05 (i.e., raise 1.05 to the power of 1/12). We store this value in as the `monthly_multiplier` variable, which as it happens corresponds to a value of about 1.004. All of which is a rather long winded way of saying that the annual interest rate of 5% corresponds to a monthly interest rate of about 0.4%.
+If you're like me and somehow have a panic attack every time someone asks you to do calculations with money, it might help to unpack this line a bit. What we're trying to calculate here is a number (`monthly_multiplier`) that we would have to multiply the current balance by *each month* in order to produce an annual interest rate of 5%. An annual interest rate of 5% implies that, if no payments were made over 12 months the balance would end up being 1.05 times what it was originally, so the *annual* multiplier is 1.05. To calculate the monthly multiplier, we need to calculate the 12th root of 1.05 (i.e., raise 1.05 to the power of 1/12). We store this value in as the `monthly_multiplier` variable, which as it happens corresponds to a value of about 1.004. All of which is a rather long winded way of saying that the annual interest rate of 5% corresponds to a monthly interest rate of about 0.4%.
 
-Anyway... all of that is really just setting the stage. It’s not the interesting part of the script. The interesting part -- such as it is -- is the loop which unfolds over lines 12-23. The `while` statement on line 12 tells R that it needs to keep looping until the balance reaches zero. If we strip out the parts of the code that print the results to the screen, the important part of the loop looks like this:
+Have I mentioned how much I *hate* financial calculations?
+
+Anyway... all of that is really just setting the stage. The interesting part of the script is the loop. The `while` statement tells R that it needs to keep looping until the `balance` falls below zero. If we strip out the frills, the loop looks like this:
 ```{r,eval=FALSE}
 while(balance > 0){
   month <- month + 1                      # one more month
@@ -133,9 +136,11 @@ while(balance > 0){
 }
 ```
 
-Firstly we increase the value `month` by 1 (on line 15). Next, the bank charges the interest (on line 16), so the `balance` goes up. Then, the couple makes their monthly payment (on line 17) and the `balance` goes down. Finally, we keep track of the total amount of money that the couple has paid so far, by adding the payments to the running tally (on line 18). After having done all this number crunching, we tell R (on line 21) to issue the couple with a very terse monthly statement, which just indicates how many months they’ve been paying the loan and how much money they still owe the bank. Which is rather rude of us really. I’ve grown attached to this couple and I really feel they deserve better than that. But, that’s banks for you.
+Firstly we increase the value `month` by 1. Next, the bank charges the interest, so the `balance` goes up. Then, the couple makes their monthly payment and the `balance` goes down. Finally, we keep track of the total amount of money that the couple has paid so far. After having done this number crunching, we tell R to issue the couple with a very terse monthly statement (that's one of the frills I removed), indicating indicates how many months they’ve been paying the loan and how much money they still owe the bank. Which is rather rude of us really. I’ve grown attached to this couple and I really feel they deserve better. I guess that’s banks for you.
 
-In any case, the key thing here is the tension between the increase in `balance` on line 16 and the decrease on line 17. As long as the decrease is bigger, then the balance will eventually drop to zero and the loop will eventually terminate. If not, the loop will continue forever! This is very bad programming on my part: I should have included something to force R to stop if this goes on too long. However, I haven’t shown you how to evaluate `if` statements yet, so we’ll just have to hope that the author of the book has rigged the example so that the code actually runs. Hm. I wonder what the odds of that are? Anyway, assuming that the loop does eventually terminate, there’s one last line of code (line 26) that prints out the total amount of money that the couple handed over to the bank over the lifetime of the loan.
+In any case, the key thing here is the tension between the increase in `balance` due to interest and the decrease due to repayments. As long as the decrease is bigger, then the balance will eventually drop to zero and the loop will eventually terminate. If not, the loop will continue forever! This is very bad programming on my part: I should have included something to force R to stop if this goes on too long. For now, we’ll just have to hope that the author has rigged the example so that the loop actually terminates. Hm. I wonder what the odds of that are? 
+
+Anyway, assuming that the loop does eventually terminate, there’s one last line of code that prints the total amount of money that the couple handed over to the bank over the lifetime of the loan.
 
 Now that I’ve explained everything in the script in tedious detail, let’s run it and see what happens:
 
@@ -146,9 +151,9 @@ source("./scripts/mortgage.R")
 source("./scripts/mortgage.R")
 ```
 
-So our nice young couple have paid off their \$300,000 loan in just 4 months shy of the 30 year term of their loan, at a bargain basement price of \$568,046. A happy ending!
+So our nice young couple have paid off the \$300,000 loan just 4 months shy of the 30 year term of their mortgage, all at a bargain basement price of \$568,046. 
 
-
+A happy ending! `r emo::ji("tada")` `r emo::ji("balloon")` `r emo::ji("cake")` 
 
 
 
@@ -166,15 +171,19 @@ for ( VAR in VECTOR ) {
 
 In a `for` loop, R runs a fixed number of iterations. We have a vector which has several elements, each one corresponding to a possible value of the variable `var`. In the first iteration of the loop, `var` is given a value corresponding to the first element of vector; in the second iteration of the loop `var` gets a value corresponding to the second value in vector; and so on. Once we’ve exhausted all of the values in the vector, the loop terminates and the flow of the program continues down the script. 
 
-### Simple examples
+### Multiplication tables
 
-For example, this loop will print the word "hello" three times:
+When I was a kid we used to have multiplication tables hanging on the walls at home, so I'd end up memorising the all the multiples of small numbers. I was okay at this as long as all the numbers were smaller than 10. Anything above that and I got lazy. So as a first example we'll get R to print out the multiples of 137. Let's say I want to it to calculate $137 \times 1$, then $137 \times 2$, and so on until we reach $137 \times 10$. In other words what we want to do is calculate `137 * value` for every `value` within the range spanned by `1:10`, and then print the answer to the console. Because we have a *fixed* range of values that we want to loop over, this situation is well-suited to a `for` loop. Here's the code:
 
 ```{r}
-for(i in 1:3) {
-  print("hello")
+for(value in 1:10) {
+  answer <- 137 * value
+  print(answer)
 }
 ```
+
+
+### Looping over other vectors
 
 However, there’s nothing that stops you from using something non-numeric as the vector of possible values, as the following example illustrates. This time around, we’ll use a character vector to control our loop, which in this case will be a vector of words. And what we’ll do is calculate the length of the word, and print it out. Here’s the script:
 
@@ -194,10 +203,9 @@ Of course, we actually didn't need that loop at all since the `nchar` function c
 nchar(words)
 ```
 
-### A turtle example
+### For the love of turtles
 
-```{r, fig.show='animate', interval=0.3, cache=TRUE}
-library(grid)           # grid graphics
+```{r, fig.show='animate', interval=0.3, cache=TRUE, message=FALSE}
 library(TurtleGraphics) # load the TurtleGraphics package 
 turtle_init()           # initialise the terrarium
 for(i in 1:6) {
